# unibo_projects

./: .gitignore  .gitmodules  README.md  blyat.c
Algoritmi/Ordinamento/: merge-sort  merge.c  sort  sorting.c
Algoritmi/Progetto/: 0001114441 time.c  0001114441.c  not_working.c
Architetture/: asm  test_asm.c
Architetture/02092022/: 02092022.c
Ottava settimana/: dataset.csv  first.c  queue.c  queue.h  test.txt
Prima settimana/: second.c
Quarta settimana/: first.c  second.c
Quinta settimana/: first.c  second.c
Seconda settimana/: first.c  second.c
Sesta settimana/: first.c  second.c
Settima settimana/: first.c  loan_data.csv  martina.c  test.c
SisOp/: due.sh
Terza settimana/: first.c  second.c
algorithms/: README.md
class a/: circle_list.c  fattoriale_array.c  lists.c  preesame.c  priority_list.c
class b/: fib.c  fibonacci.h
computer_architecture/: README.md
computer_graphics/: istruzioni_cmake.txt
computer_graphics/Laboratorio2.1/: CMakeLists.txt  Gui.cpp  Laboratorio2.1.sln  Laboratorio2.1.vcxproj  Laboratorio2.1.vcxproj.filters  Laboratorio2.cpp  ShaderMaker.cpp  gestione_Eventi.h  imgui.ini  vertexShaderC.glsl
computer_graphics/Laboratorio2.1/res/: fragmentShaderC.glsl
databases/: .~lock.Libreria.lun#  LIBRERIA.ddl  Libreria.lun  README.md  esercizio1.lun
numerical_methods/: README.md
oop/: README.md
operating_systems/: README.md
programming/: README.md
simulazioni/: 2021-01-25.c  2021-06-09.c  2021-09-13.c  2022-01-17.c  2022-02-14.c  2022-06-21.c  2022-07-08.c  2022-09-13.c  appuntamenti.txt  ordini.txt  second.c
(+560 files in other folders)
